# ezytutor

./: .gitignore  Cargo.toml  data-model.md  test-req.http
migrations/: 20230602235833_create_ezy_course_c4_table.down.sql  20230602235833_create_ezy_course_c4_table.up.sql
scripts/: insert_test_data_into_ezy_course.sql
tutor-db/: Cargo.toml
tutor-db/src/: errors.rs  lib.rs  models.rs  states.rs
tutor-db/src/scopes/: courses.rs
tutor-db/src/scopes/courses/: get_course.rs  get_course_for_tutor.rs  post_new_course.rs
tutor-db/src/states/: db_state.rs
tutor-db/tests/: courses.rs
tutor-nodb/: Cargo.toml
tutor-nodb/src/: lib.rs  scopes.rs
tutor-nodb/src/model/: courses.rs
tutor-nodb/src/scopes/: courses.rs  health.rs
tutor-nodb/src/states/: courses.rs  health.rs
tutor-nodb/tests/: courses.rs  integration_test.rs
