[workspace]
members = ["tutor-nodb", "tutor-db"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["KOZAKI Tsuneaki <kozaki.tsuneaki@gmail.com>"]

[workspace.dependencies]
actix-web = "4.3.1"
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.18"
error-stack = "0.3.1"
derive_more = "0.99.17"
chrono = { version = "0.4.26", features = ["serde"] }
serde = { version = "1.0.163", features = ["derive"] }
uuid = { version = "1.3.3", features = ["v4", "serde", "macro-diagnostics"] }
pretty_assertions = "1.3.0"
sqlx = { version = "0.6.3", default-features = false, features = [
    "runtime-actix-native-tls",
    "postgres",
    "macros",
    "uuid",
    "chrono",
] }
openssl = { version = "0.10.54", features = ["vendored"] }
