[package]
name = "tutor-db"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx.workspace = true
actix-web.workspace = true
openssl.workspace = true
dotenv.workspace = true
env_logger.workspace = true
log.workspace = true
error-stack.workspace = true
derive_more.workspace = true
chrono.workspace = true
serde.workspace = true
uuid.workspace = true

todo = "0.3.0"

[dev-dependencies]
pretty_assertions.workspace = true
serde_json = "1.0.96"
